# ETL_Pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
data/raw/: encounters.csv
docs/: architecture.md
docs/assets/demo/: data_quality_report.json  encounters.csv  patients.csv  rejected_rows.csv
examples/: analytics_queries.sql  portfolio_walkthrough.md
src/healthcare_etl/: __init__.py  cli.py  examples.py  extract.py  load.py  pipeline.py  transform.py  visualization.py
tests/: test_pipeline.py
