[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-etl-pipeline"
version = "0.1.0"
description = "A lightweight Python ETL pipeline for synthetic healthcare encounter data."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Alex" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
dependencies = []

[project.scripts]
healthcare-etl = "healthcare_etl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
